corrected spacing

--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ p {
   margin-bottom: 64px;
 }
 
+.paragrafo-color {
+  color: blue;
+  font-weight: bold;
+  margin-bottom: 48px;
+}
+
 .texto {
   color: #333333;
   font-size: 16px;
